# StringMath

./: README.md
example/: CMakeLists.txt  interface.cpp  interface.h  interface.ui
lib/: CMakeLists.txt  expression.cpp  expression.h  expression_analyzer.cpp  expression_analyzer.h  expression_checker.cpp  expression_checker.h  expression_operand.cpp  expression_operand.h  expression_operator.cpp  expression_operator.h  expression_symbol.cpp  expression_symbol.h  fr_op_interpreter.cpp  fr_op_interpreter.h  func_interpreter.cpp  func_interpreter.h  list_math.cpp  list_math.h  math_checker.cpp  math_checker.h  math_parser.cpp  math_parser.h  math_processor.cpp  math_processor.h  op_interpreter.cpp  op_interpreter.h  sr_op_interpreter.cpp  sr_op_interpreter.h  string_math.cpp  string_math.h  string_math_base.cpp  string_math_base.h  string_math_constant.cpp  string_math_constant.h  string_math_function.cpp  string_math_function.h  string_parser.cpp  string_parser.h  term_calc.cpp  (+1 more)
lib/base/: CMakeLists.txt  expression.cpp  expression.h  expression_operand.cpp  expression_operand.h  expression_operator.cpp  expression_operator.h  expression_symbol.cpp  expression_symbol.h  math_parser.cpp  math_parser.h  math_processor.cpp  math_processor.h  string_math.cpp  string_math.h  string_math_base.cpp  string_math_base.h  string_math_constant.cpp  string_math_constant.h  string_math_function.cpp  string_math_function.h
lib/widget/: CMakeLists.txt  resources.qrc  string_math_menu.cpp  string_math_menu.h  string_math_widget.cpp  string_math_widget.h  string_math_widget.ui
source/: string_math.cpp  string_math.h
test/: CMakeLists.txt  main.cpp  resources.qrc  string_math_tests.cpp  string_math_tests.h  test.txt
